<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ui.AboutActivity"
    android:background="@color/background_light">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:titleTextColor="@color/colorAccent"
            android:gravity="left"
            android:background="@color/colorAccent">

            <TextView
                android:textColor="@color/colorPrimaryDark"
                android:id="@+id/appname"
                android:textSize="28sp"
                android:gravity="start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nav_about"
                android:padding="5dp"/>


        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/top"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:layout_gravity="center"
            android:layout_marginTop="60sp"
            android:layout_marginBottom="40sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/version"
            android:layout_gravity="center"
            android:layout_marginBottom="60sp"/>


        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="100sp"
            android:layout_height="100sp"
            android:layout_gravity="center"
            android:id="@+id/profileImage"
            android:src="@mipmap/logo"
            android:layout_marginTop="30sp"
            android:layout_marginBottom="30sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/company"
            android:layout_gravity="center"
            android:layout_marginBottom="40sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:text="@string/license"
            android:layout_gravity="center"
            android:layout_marginBottom="20sp"/>

    </LinearLayout>

</RelativeLayout>