<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.dashboard.DashboardFragment"
    android:background="@color/background_light">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <HorizontalScrollView
            android:id="@+id/tabs"
            android:scrollbars="none"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/t1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/round_background"
                    android:text="@string/tab1"
                    android:layout_marginEnd="10dp"
                    android:textColor="@color/white"
                    android:padding="15dp"
                    />

                <TextView
                    android:id="@+id/t2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/round_background"
                    android:text="@string/tab2"
                    android:textColor="@color/white"
                    android:layout_marginEnd="10dp"
                    android:padding="15dp"
                    />

                <TextView
                    android:id="@+id/t3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/round_background"
                    android:textColor="@color/white"
                    android:text="@string/tab3"
                    android:layout_marginEnd="10dp"
                    android:padding="15dp"
                    />

                <TextView
                    android:id="@+id/t4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:background="@drawable/round_background"
                    android:text="@string/tab4"
                    android:layout_marginEnd="15dp"
                    android:padding="15dp"
                    />
                <TextView
                    android:id="@+id/t5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/round_background"
                    android:textColor="@color/white"
                    android:text="@string/tab5"
                    android:layout_marginEnd="10dp"
                    android:padding="15dp"
                    />


            </LinearLayout>

        </HorizontalScrollView>



            <androidx.recyclerview.widget.RecyclerView
                android:layout_below="@+id/tabs"
                android:id="@+id/main_listView"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>




    </RelativeLayout>





</FrameLayout>