<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ui.ProfileActivity"
    android:background="@color/background_light">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarProfile"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:titleTextColor="@color/colorAccent"
            android:gravity="left"
            android:background="@color/colorAccent">

            <TextView
                android:textColor="@color/colorPrimaryDark"
                android:id="@+id/appname"
                android:textSize="28sp"
                android:gravity="start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nav_profile"
                android:padding="5dp"/>


        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/top"
        android:clickable="true"
        android:orientation="vertical">


        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="150sp"
            android:layout_height="150sp"
            android:layout_gravity="center"
            android:id="@+id/profileImage"
            android:src="@drawable/default_user_art_g_2"
            android:layout_marginTop="20sp"
            android:layout_marginBottom="20sp"/>



        <androidx.cardview.widget.CardView
            android:id="@+id/nameCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5sp">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="top|right"
                android:layout_marginRight="30sp"
                android:layout_marginTop="15sp"
                app:srcCompat="@drawable/ic_edit_24" />


            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:minHeight="48dp"
                android:orientation="horizontal"
                android:padding="10sp">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginTop="8dp"
                    app:srcCompat="@drawable/ic_person_24" />



                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="32dp"
                    android:layout_marginStart="32dp"
                    android:orientation="vertical"
                    android:paddingBottom="8dp">


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@null"
                            android:text="@string/full_name"
                            android:layout_marginBottom="10sp"
                            android:layout_marginRight="30sp"/>

                        <TextView
                            android:id="@+id/fullName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="15sp"
                            android:text="@string/full_name"
                            android:layout_marginBottom="10sp"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/name_explanation"/>


                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/phoneCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5sp">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="top|right"
                android:layout_marginRight="30sp"
                android:layout_marginTop="15sp"
                app:srcCompat="@drawable/ic_edit_24" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:minHeight="48dp"
                android:orientation="horizontal"
                android:padding="10sp">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginTop="8dp"
                    app:srcCompat="@drawable/ic_phone_24" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="32dp"
                    android:layout_marginStart="32dp"
                    android:orientation="vertical"
                    android:paddingBottom="8dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/phone"
                        android:layout_marginBottom="10sp"/>

                    <TextView
                        android:id="@+id/phone"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/phone"
                        android:layout_marginBottom="10sp"/>

                </LinearLayout>

            </LinearLayout>


        </androidx.cardview.widget.CardView>



        <androidx.cardview.widget.CardView
            android:id="@+id/emailCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5sp">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:minHeight="48dp"
                android:orientation="horizontal"
                android:padding="10sp">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginTop="8dp"
                    app:srcCompat="@drawable/ic_email_24" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="32dp"
                    android:layout_marginStart="32dp"
                    android:orientation="vertical"
                    android:paddingBottom="8dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/email"
                        android:layout_marginBottom="10sp"/>

                    <TextView
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/email"
                        android:layout_marginBottom="10sp"/>

                </LinearLayout>

            </LinearLayout>


        </androidx.cardview.widget.CardView>



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/by"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/dev_info"/>

    </LinearLayout>



</RelativeLayout>